sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() 
{
var n:Int=getNombreValeurs()
var v:Int=0
var j=i ;
for (i<-1 to n-1 by 1) 
{
	
	v=getValeur(i) ;
while( j>0 && getValeur(j-1)>v)    {
	copie(j-1,j) 
	j=j-1 ;
	setValeur(j,v) ;
}
}
}
